# TrackVault

./: .gitignore  Cargo.toml
agent/: Cargo.toml
agent/src/: main.rs
agent/src/functions/: mod.rs  scheduler.rs
agent/src/helpers/: utils.rs
agent/src/models/: errors.rs  mod.rs
cli/: frontend.py
client/: config.json  main.py  requirements.txt
client/res/: config.json
client/src/: get-info.py  getInfo.py
client/src/controllers/: getApplicationsInfo.py  getAssetInfo.py  getClockSyncInfo.py  getControlOfInternet.py  getWinUpdatesInfo.py
client/src/helpers/: localySave.py  mongoDb.py  sendToServer.py
client/src/routes/: getRoutes.py
client/utils/: apiUtils.py  configify.py  coreUtils.py  logify.py
postman/: TrackVault.postman_collection.json
res/: config.json
scripts/: client-make-package.bat  client-test-script.bat
src/: main.rs
src/api/: agent.rs  global.rs
src/classes/: log.rs  mod.rs  tokens.rs
src/helpers/: config.rs  mod.rs  tokenization.rs  utils.rs
src/models/: apis.rs  errors.rs  mod.rs
src/models/enums/: errors.rs
src/models/structs/: api.rs  global.rs  mod.rs
src/res/: config.json
src/utils/: mod.rs
utils/: apiUtils.py  configify.py
