[package]
name = "TrackVault"
version = "0.1.0"
edition = "2021"

[dependencies]
jsonwebtoken = "9.2.0"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jwt = "0.16.0"
actix-web = "4.9.0"
tokio = "1.43.0"
thiserror = "2.0.11"
rusqlite = "0.33.0"
base64 = "0.22.1"
